# nixos

./: .gitignore  .sops.yaml  README.md  change-modes.sh  configuration.nix  darwin-configuration.nix  flake.nix  hardware-configuration.nix  init_setup.sh  mac_init_setup.sh  mac_p1.sh  mac_p2.sh  makefile  nixos_init_setup.sh  pbcopy  tmp.sh
.githooks/: pre-push
home/: alacritty.nix  android-home.nix  bat.nix  btop.nix  defaults.nix  fonts.nix  git.nix  gtk_themes.nix  home.nix  idea.nix  nvim.nix  rclone.nix  rice.nix  rust.nix  shell.nix  ssh.nix  tmux.nix  zathura.nix
home/common/: btop.nix  direnv.nix  fonts.nix  ghostty.nix  git.nix  jj.nix  kitty.nix  rclone.nix  rust.nix  ssh.nix  tmux.nix
home/dunst/: dunst.nix
home/hyprland/: hyprland.nix  wrapper.nix
home/linux/: cursor.nix  dconf.nix  gtk_themes.nix  kitty.nix  swayidle.nix  swaylock.nix
home/nvim/: nvim.nix  test.py  todo.md
home/shell/: shell.nix
home/skhd/: skhd.nix
home/walls/: wpapred.nix
home/waybar/: \  style.css  waybar.nix
home/wayland/: wayland.nix
home/wofi/: wofi.nix
home/xdg/: wrappers.nix  xdg.nix
home/yabai/: yabai.nix
homelab/: configuration.nix  home-assistant.nix  monitoring.nix  nas-backup.sh  proxmox.nix  remote.nix
homelab/remote/: Cargo.toml
homelab/remote/src/: main.rs
homelab/remote/static/: index.html
keyboard/: iris_ce_rev__1.layout.json  nuphy_air75_v2_homerow.layout.json
modules/: udev-rules.nix
program_config/: user.nix
secrets/: secrets.yaml
setup/: mac_init.sh  mac_p1.sh  mac_p2.sh  nixos_init_setup.sh
shells/: rust-toolchain.toml
(+103 files in other folders)
