[package]
name = "remote"
version = "0.1.0"
edition = "2021"
description = "Web-based TV remote that publishes Tasmota IR commands over MQTT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
mqtt5 = "0.34"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
